--- a/src/client/resources/assets/dancerizer/lang/en_us.json
+++ b/src/client/resources/assets/dancerizer/lang/en_us.json
@@ -5,6 +5,7 @@
   "dancerizer.keybind.dance": "Perform Dance",
 
   "modmenu.dancerizer.modrinth": "Modrinth Page",
+  "modmenu.dancerizer.modfest": "ModFest: Carnival",
   "modmenu.dancerizer.kofi": "Support me on §lKo-fi§r§n! §c♡§r§7",
-  "modmenu.dancerizer.modfest": "ModFest: Carnival"
+  "modmenu.dancerizer.lgplv3": "GNU LESSER GENERAL PUBLIC LICENSE"
 }
