feat: Data-driven animations via item components

--- a/src/client/resources/assets/dancerizer/lang/en_us.json
+++ b/src/client/resources/assets/dancerizer/lang/en_us.json
@@ -4,6 +4,11 @@
   "dancerizer.keybind.taunt": "Perform Taunt",
   "dancerizer.keybind.dance": "Perform Dance",
 
+  "info.dancerizer.missing_taunt": "You cannot use a taunt without the appropriate equipment",
+  "info.dancerizer.missing_dance": "You cannot perform a dance without the appropriate equipment",
+
+  "stat.dancerizer.taunt": "Used Taunts",
+
   "modmenu.dancerizer.modrinth": "Modrinth Page",
   "modmenu.dancerizer.modfest": "ModFest: Carnival",
   "modmenu.dancerizer.kofi": "Support me on §lKo-fi§r§n! §c♡§r§7",
