feat: Horse Mask

--- a/src/client/resources/assets/dancerizer/lang/en_us.json
+++ b/src/client/resources/assets/dancerizer/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.dancerizer.rrongs_tie": "Rrong's Tie",
   "item.dancerizer.athletic_wings": "Athletic Wings",
   "item.dancerizer.mlg_glasses": "MLG Glasses",
+  "item.dancerizer.horse_mask": "Horse Mask",
   "item.dancerizer.pokebow": "PokéBow",
   "item.dancerizer.mesmerizing_mask": "Mesmerizing Mask",
 
@@ -10,6 +11,7 @@
   "animation.title.taunt.flexing": "Flexing",
   "animation.title.taunt.romanza": "Romanza",
   "animation.title.taunt.dab": "Dab",
+  "animation.title.dance.geddan": "GEDDAN (Get Down)",
   "animation.title.dance.pokedance": "Pokédance",
   "animation.title.dance.mesmerizer": "MESMERIZER",
 
