feat: Dance time statistic

--- a/src/client/resources/assets/dancerizer/lang/en_us.json
+++ b/src/client/resources/assets/dancerizer/lang/en_us.json
@@ -30,6 +30,7 @@
   "dancerizer.options.button.toggle_hints.tooltip": "Determines when a message should be shown after hitting a dance or taunt hotkey without success.",
 
   "stat.dancerizer.taunt": "Used Taunts",
+  "stat.dancerizer.dance": "Danced for",
 
   "itemGroup.dancerizer": "Dancerizer",
 
